--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -75,11 +75,13 @@
                                 <div class="login-to-comment">
                                     {% if request.user.is_authenticated %}
                                         <!-- this below is the reply button and the reply box-->
-                                        <button onclick="showReplyBox(this)" type="button" data-target="reply-box-1" class="btn btn-link">Reply</button>
-                                        <form class="reply-box" id="reply-box-1">
+                                        <button onclick="showReplyBox(this)" type="button" data-target="reply-box-{{forloop.counter}}" class="btn btn-link">Reply</button>
+                                        <form method="POST" class="reply-box" id="reply-box-{{forloop.counter}}">
+                                            {% csrf_token %}
                                             <div class="form-group no-gutters">
-                                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                                <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"></textarea>
                                             </div>
+                                            <input type="hidden" value="{{comment.id}}" name="replied_comment_id" >
                                             <div class="container-button-submit">
                                                 <button type="submit" class="btn btn-primary">Submit</button>
                                             </div>                
