comment and reply system done

--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -65,32 +65,7 @@
                             {% endif %}
                         {% endif %}
                         {% for comment in comments %}
-                            <div class="comment mb-2">
-                                <h6 class="user font-weight-bold">{{comment.user.username}}</h6>
-                                <span class="date font-weight-light">(26-08-2020)</span>
-                                <span class="rating">
-                                    {{ comment.rating | render_rating }}
-                                </span>
-                                <p class="content">{{comment.content}}</p>
-                                <div class="login-to-comment">
-                                    {% if request.user.is_authenticated %}
-                                        <!-- this below is the reply button and the reply box-->
-                                        <button onclick="showReplyBox(this)" type="button" data-target="reply-box-{{forloop.counter}}" class="btn btn-link">Reply</button>
-                                        <form method="POST" class="reply-box" id="reply-box-{{forloop.counter}}">
-                                            {% csrf_token %}
-                                            <div class="form-group no-gutters">
-                                                <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                            </div>
-                                            <input type="hidden" value="{{comment.id}}" name="replied_comment_id" >
-                                            <div class="container-button-submit">
-                                                <button type="submit" class="btn btn-primary">Submit</button>
-                                            </div>                
-                                        </form>
-                                    {%else %}
-                                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to reply</button>
-                                    {% endif %}
-                                </div>
-                            </div>
+                            {% comment_tag comment request%}
                         {% endfor %}
                     </div>
                 </div>
