--- a/templates/story/posting_story.html
+++ b/templates/story/posting_story.html
@@ -18,6 +18,14 @@
                         <div class="form-group">
                           <input type="text" value="{% if story %} {{story.title}}  {% endif %}" class="form-control" name="title" id="exampleFormControlInput1" placeholder="Judul Cerita">
                         </div>
+                        <div class="form-group" style="max-width: 250px;">
+                          <label for="tags">Tags</label>
+                          <div style="display: flex;" class="input-tag">
+                            <input type="text" class="form-control" name="tags" required id="tags" placeholder="Tagar cerita ...">
+                            <button class="btn btn-danger ml-1" id="add-tags"><i class="fas fa-trash"></i>Delete</button>
+                          </div>
+                          <button class="btn btn-primary mt-1" id="add-tags">Tambah tag</button>
+                        </div>
                         <div class="form-group">
                           <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="50">
                             {% if story %} 
