deleting tag done

--- a/templates/story/posting_story.html
+++ b/templates/story/posting_story.html
@@ -22,7 +22,7 @@
                           <label for="tags">Tags</label>
                           <div id="input-tag-list">
                             <div class="input-tag">
-                              <input type="text" class="form-control tags" name="tag-1" placeholder="Tagar cerita ...">
+                              <input type="text" class="form-control tags" name="tag[]" placeholder="Tagar cerita ...">
                             </div>
                           </div>
                           <button type="button" class="btn btn-primary mt-1" id="add-tag">Tambah tag</button>
@@ -43,8 +43,8 @@
         </div>
     </div>
     <template id="input-tag-template">
-      <div class="input-tag mt-1">
-        <input type="text" class="form-control tags" name="tag-1" placeholder="Tagar cerita ...">
+      <div id="tag-1" class="input-tag mt-1">
+        <input type="text" class="form-control tags" name="tag" placeholder="Tagar cerita ...">
         <button type="button" onclick="deleteTag(this)" data-tag="tag-1" class="btn btn-danger ml-1 delete-tag"><i class="fas fa-trash"></i></button>
       </div>
     </template>
@@ -66,9 +66,8 @@
           containingDiv = clone.firstElementChild
           containingDiv.id = tag_number
           clone.querySelectorAll(".tags")[0].id = tag_number;
-          clone.querySelectorAll(".tags")[0].name = tag_number;
-          clone.querySelectorAll(".btn")[0].dataTag = tag_number;
-          
+          // clone.querySelectorAll(".tags")[0].name = tag_number;
+          clone.querySelectorAll(".btn")[0].dataset.tag = tag_number;
 
           //add to containing element
           var containingElement = document.getElementById("input-tag-list")
