--- a/templates/user/user_profile.html
+++ b/templates/user/user_profile.html
@@ -38,7 +38,7 @@
                     </div>
                     <h4 class="card-title">Cerita</h4>
                     {% for story in stories %}
-                        {{story|render_story_box}}
+                        {% story_box_tag story %}
                     {% endfor %}
                 </div>
             </div>
