--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -56,7 +56,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group no-gutters">
-                                            <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                            <textarea required name="content" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                         </div>
                                         <div class="container-button-submit">
                                             <button type="submit" class="btn btn-primary">Submit</button>
