--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -11,11 +11,11 @@
                         {% csrf_token %}
                         <div class="form-group">
                           <label for="nama-lengkap">Nama Lengkap</label>
-                          <input type="text" value = "{{nama_lengkap}}" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
+                          <input required type="text" value = "{{nama_lengkap}}" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
                         </div>
                         <div class="form-group">
                           <label for="tanggal-lahir">Tanggal Lahir</label>
-                          <input type="date" value="{{tanggal_lahir|date:'Y-m-d'}}" class="form-control" id="tanggal-lahir" name="tanggal-lahir"/>
+                          <input type="date" required value="{{tanggal_lahir|date:'Y-m-d'}}" class="form-control" id="tanggal-lahir" name="tanggal-lahir"/>
                         </div>
                         <div class="form-group">
                             <label for="gender">Gender</label>
@@ -34,17 +34,17 @@
                         </div>
                         <div class="form-group">
                             <label for="kota">Kota</label>
-                            <input type="text" value="{{kota}}" name="kota" class="form-control" id="kota"/>
+                            <input required type="text" value="{{kota}}" name="kota" class="form-control" id="kota"/>
                         </div>
                         <div class="form-group">
                             <label for="tentang-saya">Tentang Saya</label>
-                            <textarea class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10">
+                            <textarea required class="form-control" name="tentang-saya" id="exampleFormControlTextarea1" rows="10">
                                 {{tentang_saya}}
                             </textarea>
                         </div>
                         <div class="form-group">
                             <label for="profile-picture">Upload Foto Profil</label>
-                            <input type="file" name="profile-picture" id="profile-picture">
+                            <input required type="file" name="profile-picture" id="profile-picture">
                         </div>    
                         <div class="form-group" style="text-align: right;">
                             <button type="submit" class="btn btn-primary">Simpan</button>
