implement search box by judul

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -24,8 +24,8 @@
                             </ul>
                        </div>
                        <div class="col-lg-6">
-                            <form class="form-inline">
-                                <input class="searchbar form-control mr-2" type="search" placeholder="Cari berdasarkan judul" aria-label="Search">
+                            <form method="GET" class="form-inline">
+                                <input name="judul" class="searchbar form-control mr-2" type="text" placeholder="Cari berdasarkan judul" aria-label="Search">
                                 <button class="btn btn-outline-primary" type="submit">Pencarian</button>
                             </form>
                        </div> 
