--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="form-group">
                             <label for="profile-picture">Upload Foto Profil</label>
-                            <input required type="file" name="profile-picture" id="profile-picture">
+                            <input type="file" name="profile-picture" id="profile-picture">
                         </div>    
                         <div class="form-group" style="text-align: right;">
                             <button type="submit" class="btn btn-primary">Simpan</button>
