implement point calculation

--- a/templates/user/user_profile.html
+++ b/templates/user/user_profile.html
@@ -34,6 +34,10 @@
                                 <span class="label font-weight-bold">Tentang Saya</span>
                                 <p class="info">{{tentang_saya}}</p>
                             </div>
+                            <div class="row-info">
+                                <span class="label font-weight-bold">Poin</span>
+                                <p class="info">{{poin}}</p>
+                            </div>
                         </div>
                     </div>
                     <h4 class="card-title">Cerita</h4>
