fix navbar bug in user profile page

--- a/templates/user/user_profile.html
+++ b/templates/user/user_profile.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% include 'navbar.html' %}
     <div class="container mt-5">
-        <h2>{{username}}</h2>
+        <h2>{{user.username}}</h2>
         <div class="row">
             <div class="card" style="width: 100%">
                 {% include 'user/profile_tab.html' %}
@@ -51,5 +51,5 @@
 {% endblock %}
 
 {% block title %}
-	Profil {{username}}
+	Profil {{user.username}}
 {% endblock %}
