add points field to profile model default value 20

--- a/templates/story/posting_story.html
+++ b/templates/story/posting_story.html
@@ -13,35 +13,15 @@
                         Edit Cerita
                       {% endif %}
                     </h3>
-                    <form method="POST">
-                        {% csrf_token %}
-                        <div class="form-group">
-                          <input required type="text" value="{% if story %} {{story.title}}  {% endif %}" class="form-control" name="title" id="exampleFormControlInput1" placeholder="Judul Cerita">
-                        </div>
-                        <div id="tag-form-group" class="form-group">
-                          <label for="tags">Tags</label>
-                          <div id="input-tag-list">
-                            {% if story %}
-                              {%for tag in story.tags%}
-                                <div id="tag-{{forloop.counter}}" class="input-tag mt-1">
-                                  <!-- <input required type="text" class="form-control input-tags" value="{{tag.name}}" name="tag[]" placeholder="Tagar cerita ..."> -->
-                                  {% include 'input_tag.html' %}
-                                  <button type="button" onclick="deleteTag(this)" data-tag="tag-{{forloop.counter}}" class="btn btn-danger ml-1 delete-tag"><i class="fas fa-trash"></i></button>
-                                </div>
-                              {%endfor%}
-                            {%else %} 
-                              {% include 'input_tag.html' %}
-                            {% endif %}
-                          </div>
-                          <button type="button" class="btn btn-primary mt-1" id="add-tag">Tambah tag</button>
-                        </div>
-                        <div class="form-group">
-                          <textarea required class="form-control" name="content" id="textarea" rows="50">{% if story %}{{story.content}}{% endif %}</textarea>
-                        </div>
-                        <div class="form-group" style="text-align: right;">
-                          <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
+                    {% if page == "post_story" %}
+                      {% if rating >= 20 %}
+                        {% include 'form_posting_story.html' %}  
+                      {%else %}
+                        <p>Belum bisa posting cerita. Silakan tambah poin terlebih dahulu dengan berkomentar di postingan lain.</p>
+                      {% endif %}
+                    {%else %}
+                      {% include 'form_posting_story.html' %}
+                    {% endif %}
                 </div>
             </div>
         </div>
