--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -14,7 +14,7 @@
                                 <span class="text-story-info font-weight-light">(3200 kata) by <a href="/user/{{story.user.username}}/profile">{{story.user.username}}</a> on {{story.date_posted}}</span>
                                 <span class="text-story-info tags font-weight-light">Tags: 
                                     {% for tag in  story.tags%}
-                                        <a href="twitter.com">{{tag.name}}</a> |
+                                        <a href="/stories?tag={{tag.name}}">{{tag.name}}</a> |
                                     {% endfor %}
                                 </span>
                                 {% if request.user.is_authenticated %}
