--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                         <div class="story-content">
-                            <p>{{story.content}}</p>
+                            <p>{{story.content | safe}}</p>
                         </div>
                     </div>
                     <div class="comments">
