--- a/templates/form_posting_story.html
+++ b/templates/form_posting_story.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.ckeditor.com/ckeditor5/28.0.0/classic/ckeditor.js"></script>
 <form method="POST">
     {% csrf_token %}
     <div class="form-group">
@@ -21,9 +22,34 @@
       <button type="button" class="btn btn-primary mt-1" id="add-tag">Tambah tag</button>
     </div>
     <div class="form-group">
-      <textarea required class="form-control" name="content" id="textarea" rows="50">{% if story %}{{story.content}}{% endif %}</textarea>
+      <textarea class="form-control" name="content" id="textarea" rows="50">{% if story %}{{story.content}}{% endif %}</textarea>
     </div>
     <div class="form-group" style="text-align: right;">
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </form>
+  <!-- <script>
+    ClassicEditor.builtinPlugins.map( plugin => console.log("plugin",plugin.pluginName));
+  </script> -->
+  <script>
+    ClassicEditor
+        // .create( document.querySelector( '#textarea'),{
+        //   removePlugins: [ "Image" ],
+        // } )
+        .create( document.querySelector( '#textarea'),{
+          toolbar: [ 'heading','bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList' ],
+          heading: {
+            options: [
+                { model: 'paragraph', title: 'Paragraph', class: 'ck-heading_paragraph' },
+                { model: 'heading1', view: 'h1', title: 'Heading 1', class: 'ck-heading_heading1' },
+                { model: 'heading2', view: 'h2', title: 'Heading 2', class: 'ck-heading_heading2' },
+                { model: 'heading3', view: 'h3', title: 'Heading 3', class: 'ck-heading_heading3' },
+                { model: 'heading4', view: 'h4', title: 'Heading 4', class: 'ck-heading_heading4' },
+                { model: 'heading5', view: 'h5', title: 'Heading 5', class: 'ck-heading_heading5' },
+            ]
+        }
+        })
+        .catch( error => {
+            console.error( error );
+        } );
+  </script>
