--- a/templates/form_posting_story.html
+++ b/templates/form_posting_story.html
@@ -33,21 +33,8 @@
   </script> -->
   <script>
     ClassicEditor
-        // .create( document.querySelector( '#textarea'),{
-        //   removePlugins: [ "Image" ],
-        // } )
         .create( document.querySelector( '#textarea'),{
-          toolbar: [ 'heading','bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList' ],
-          heading: {
-            options: [
-                { model: 'paragraph', title: 'Paragraph', class: 'ck-heading_paragraph' },
-                { model: 'heading1', view: 'h1', title: 'Heading 1', class: 'ck-heading_heading1' },
-                { model: 'heading2', view: 'h2', title: 'Heading 2', class: 'ck-heading_heading2' },
-                { model: 'heading3', view: 'h3', title: 'Heading 3', class: 'ck-heading_heading3' },
-                { model: 'heading4', view: 'h4', title: 'Heading 4', class: 'ck-heading_heading4' },
-                { model: 'heading5', view: 'h5', title: 'Heading 5', class: 'ck-heading_heading5' },
-            ]
-        }
+          toolbar: ['bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList' ],
         })
         .catch( error => {
             console.error( error );
