--- a/templates/form_posting_story.html
+++ b/templates/form_posting_story.html
@@ -28,13 +28,10 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </form>
-  <!-- <script>
-    ClassicEditor.builtinPlugins.map( plugin => console.log("plugin",plugin.pluginName));
-  </script> -->
   <script>
     ClassicEditor
         .create( document.querySelector( '#textarea'),{
-          toolbar: ['bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList' ],
+          toolbar: ['bold', 'italic', 'link', 'undo', 'redo', 'numberedList', 'bulletedList','alignment'],
         })
         .catch( error => {
             console.error( error );
